@@ -1,5 +1,12 @@
 2018-05-21  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	* parser.c (cp_parser_parameter_declaration_list): Remove
+	bool* parameter.
+	(cp_parser_parameter_declaration_clause): Adjust.
+	(cp_parser_cache_defarg): Likewise.
+
+2018-05-21  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR c++/84588
 	* parser.c (cp_parser_maybe_commit_to_declaration,
 	cp_parser_check_condition_declarator): New.
